k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intellmeet
  labels:
    app: intellmeet
